# Headless-TTY

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  build.bat  usage_example.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
Helper/: messenger.cpp
include/headless_tty/: pty.hpp  types.hpp
src/: main.cpp  pty.cpp
